plugins {
    id 'fabric-loom' version '1.11-SNAPSHOT' apply(false)
    id 'net.minecraftforge.gradle' version '[6.0,6.2)' apply(false)
    id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT' apply(false)
    id 'org.spongepowered.mixin' version "0.7-SNAPSHOT" apply(false)
    id 'org.parchmentmc.librarian.forgegradle' version '1.+' apply(false)
    // https://plugins.gradle.org/plugin/me.modmuss50.mod-publish-plugin
    id 'me.modmuss50.mod-publish-plugin' version '1.0.0' apply(false)
    // https://plugins.gradle.org/plugin/se.bjurr.gitchangelog.git-changelog-gradle-plugin
    id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '3.0.7' apply(false)
}
allprojects {
    apply plugin: 'java'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.release = 17
    }
}

subprojects {
    apply plugin: 'java'
    java.toolchain.languageVersion = JavaLanguageVersion.of(17)

    jar {
        from(rootProject.file('LICENSE'))
        from(rootProject.file('COPYING'))
        from(rootProject.file('COPYING.LESSER'))
        from(rootProject.file('README.md'))
        from(rootProject.file('files/changelog.txt'))
        manifest {
            attributes([
                'Specification-Title'     : mod_name,
                'Specification-Vendor'    : mod_author,
                'Specification-Version'   : project.jar.archiveVersion,
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_author,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'Timestamp'               : System.currentTimeMillis(),
                'Built-On-Java'           : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
                'Build-On-Minecraft'      : minecraft_version
            ])
        }
    }

    repositories {
        mavenCentral()

        maven {
            name = 'Sponge / Mixin'
            url = 'https://repo.spongepowered.org/repository/maven-public/'
        }

        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org/'
        }

        maven {
            name = 'TerraformersMC (Trinkets / ModMenu)'
            url = 'https://maven.terraformersmc.com/'
        }

        maven {
            name = 'Ladysnake Libs'
            url = 'https://maven.ladysnake.org/releases'
        }

        maven {
            name = 'Illusive Soulworks'
            url = 'https://maven.theillusivec4.top/'
        }

        maven {
            name = 'Curse Maven'
            url = 'https://cursemaven.com'
            content {
                includeGroup 'curse.maven'
            }
        }

        maven {
            name = 'WhiteNoise' // Library for wendall911 mods
            url = 'https://raw.githubusercontent.com/wendall911/maven/main/'
        }

        if (System.getenv('local_maven') != null && project.hasProperty('localmaven')) {
            maven {
                url 'file://' + localmaven
            }
        }

    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.release = 17
    }

    // Disables Gradle's custom module metadata from being published to maven. The
    // metadata includes mapped dependencies which are not reasonably consumable by
    // other mod developers.
    tasks.withType(GenerateModuleMetadata) {
        it.enabled = false
    }
}
